Update .env file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 VITE_PUBLIC_URL=http://localhost:5173
+
+VITE_WAX_CHAIN_API=https://api.waxnet.io
+VITE_WAA_URL=https://www.mycloudwallet.com
+VITE_SIGNING_URL=https://idm-api.mycloudwallet.com/v1/accounts/auto-accept/
