--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "vite --host",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
         "start": "npx serve -s dist -p 5173"
     },
     "husky": {
